force-app/main/default/objects/Visit__c/fields/Date_of_visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_visit__c</fullName>
    <label>Date of visit</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>