force-app/main/default/objects/Visit__c/fields/Visit_status__c.field-meta.xml
<CustomField>
    <fullName>Visit_status__c</fullName>
    <label>Visit status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>scheduled</fullName>
            </value>
            <value>
                <fullName>done</fullName>
            </value>
            <value>
                <fullName>canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>