force-app/main/default/objects/Visit__c/fields/Visit_type__c.field-meta.xml
<CustomField>
    <fullName>Visit_type__c</fullName>
    <label>Visit type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>consultation</fullName>
            </value>
            <value>
                <fullName>vaccination</fullName>
            </value>
            <value>
                <fullName>surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>